# oss_pipe

./: .gitignore  .objlist  Cargo.toml  LICENSE  README.md  README_cn.md  checkpoint.yml  config.yml  curl.json  download.yml  notify_file_1695206103  objlist  ping.json
docs/: 0.2.0重构计划.md  OSS_PIPE：Rust编写的大规模文件迁移工具.md  ToDo.md  best_practices.md  build.md  debug.md  getting_started.md  introduction.md  nginx代理方案.md  oss_pipe_使用说明-对外.md  oss_pipe_使用说明.md  quick_start.md  reference.md  reference_cn.md  reference_command_cn.md  reference_task_yaml.md  reference_task_yml_cn.md  s3proxy适配.md  增量实现机制.md  多线程上传大文件测试.md  文盘rust-搞了个小项目.md  断点续传实现机制.md  测试方案.md  设计与实现机制.md  重构计划.md
docs/images/: 同步流程图-v2.drawio  同步流程图-v2.iodraw  同步流程图-v3.drawio  同步流程图.drawio  增量同步流程图.drawio  增量机制.drawio  断点续传.drawio  断点续传机制.drawio
examples/: jdcloud_s3.rs
src/: lib.rs  main.rs
src/checkers/: init_check.rs  mod.rs
src/checkpoint/: checkpoint.rs  error_record.rs  fileposition.rs  mod.rs  record.rs
src/cmd/: cmd_config.rs  cmd_gen_file.rs  cmd_oss_cfg.rs  cmd_parameters.rs  cmd_template.rs  cmd_tree.rs  exit.rs  gen_file_cmd.rs  mod.rs  osstaskcmd.rs  parameters.rs  rootcmd.rs  taskcmd.rs  template.rs
src/commons/: calculate_etag.rs  convert.rs  fileutiles.rs  filters.rs  inotify_utile.rs  inotify_utile.rs.bak  json_operator.rs  json_utile.rs  mod.rs  notify_utile.rs  processbar.rs  public_const_info.rs  rand_util.rs  regex_filter.rs  size_distributed.rs  sysutiles.rs  yamlutile.rs
src/configure/: config_global.rs  mod.rs
src/exception/: mod.rs  record.rs  transfor_errors.rs
src/httpquerry/: globalhttpclient.rs  jdcloud.rs  mod.rs  request.rs
src/httpquerry/module/: jdcloud_mv.rs  mod.rs
src/interact/: cli.rs
src/logger/: logger.rs  mod.rs
src/osstask/: common_function.rs  compare_oss2oss.rs  download.rs  download.rs.bak  execute_task.rs  localtolocal.rs  mod.rs  osscompare.rs  task.rs  task_actions.rs  task_compare.rs  task_status.rs  task_transfer.rs  transfer.rs  transfer.rs.bak  transfer_local2local.rs  transfer_local2oss.rs  transfer_multi_storage.rs  transfer_oss2local.rs  transfer_oss2oss.rs  upload.rs
src/resources/: init_resources.rs  mod.rs  rocksdb.rs
src/s3/: ali_oss.rs  aws_s3.rs  jd_s3.rs  jd_s3_client.rs  jrss.rs  mod.rs  multi_transfer.rs  oss.rs  oss_client.rs  oss_client_arc.rs  oss_option_errors.rs
src/tasks/: compare_local2local.rs  compare_local2oss.rs  compare_oss2local.rs  compare_oss2oss.rs  compare_oss2oss.rs.bak  log_info.rs  mod.rs  osscompare.rs  task.rs  task_actions.rs  task_compare.rs  task_delete.rs  task_delete.rs.back  task_status.rs  task_transfer.rs  task_transfer.rs.bak_1  transfer_local2local.rs  transfer_local2oss.rs  transfer_oss2local.rs  transfer_oss2oss.rs
