[package]
name = "oss_pipe"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1"
tokio = { version = "1.39.3", features = ["full", "tracing"] }
clap = "4.5.16"
rustyline = "14.0.0"
rustyline-derive = "0.10.0"
shellwords = "1.1.0"
lazy_static = "1.4.0"
sysinfo = "0.31.3"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serde_yaml = "0.9.34"
log = "0.4.20"
log4rs = "1.2.0"
rs-snowflake = "0.6.0"
async-trait = "0.1.66"
walkdir = "2.3.2"
bytes = "1.7.1"
rayon = "1.10.0"
time = "0.3.20"
rand = "0.8.5"
rust-crypto = "0.2.36"
num_cpus = "1.15.0"
dashmap = "6.0.1"
regex = "1.10.6"
termtree = "0.5.1"
indicatif = "0.17.6"
notify = "6.1.1"
tabled = "0.16.0"
rust_decimal = "1.36.0"
inotify = "0.11.0"
once_cell = "1.19.0"
thiserror = "1.0.61"
# awaitgroup = "0.7.0"
# bincode = "1.3.3"
# infer = "0.16.0"
# rust_decimal_macros = "1.36.0"
# console-subscriber = "0.4.0"


tracing = { version = "0.1.40", features = [
    "max_level_trace",
    "release_max_level_info",
] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"
# tracing-error = "0.2.0"

# s3 from craitcrates.io
# aws-config = { version = "1.5.5", features = ["behavior-version-latest"] }
# aws-sdk-s3 = "1.48.0"
# aws-credential-types = "1.2.1"
# aws-smithy-types = "1.2.4"
# aws-types = { version = "1.3.3", feature = ["hardcoded-credentials"] }


# sudo apt update && sudo apt upgrade
# sudo apt install clang
# sudo apt install llvm
# rocksdb = { version = "0.22.0", feature = "multi-threaded-cf" }

# s3
aws-config = { path = "../aws-sdk-rust/sdk/aws-config", features = [
    "behavior-version-latest",
] }
aws-sdk-s3 = { path = "../aws-sdk-rust/sdk/s3" }
aws-credential-types = { path = "../aws-sdk-rust/sdk/aws-credential-types" }
aws-smithy-types = { path = "../aws-sdk-rust/sdk/aws-smithy-types" }
aws-types = { path = "../aws-sdk-rust/sdk/aws-types", feature = [
    "hardcoded-credentials",
] }

# azure blob
azure_core = "0.20.0"
azure_storage = "0.20.0"
azure_storage_blobs = "0.20.0"
futures = "0.3.30"


[[example]]
name = "blob_sample"
path = "examples/blob_sample.rs"

[[example]]
name = "use_hosts"
path = "examples/use_hosts.rs"
[[example]]
name = "read_line"
path = "examples/read_line.rs"


[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
